--- a/Assignment_f4/Base.lproj/Main.storyboard
+++ b/Assignment_f4/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                     <constraint firstAttribute="width" constant="99" id="EA3-H0-DJq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXj-Eo-lMp">
@@ -46,7 +46,7 @@
                                     <constraint firstAttribute="width" constant="100" id="fw4-da-ERW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ci5-9W-8wf">
@@ -73,7 +73,7 @@
                                     <constraint firstAttribute="height" constant="21" id="yAa-fI-1Nd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -130,22 +130,28 @@
                                     <constraint firstAttribute="width" constant="221" id="bts-pb-fYg"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCv-HY-vWh">
-                                <rect key="frame" x="63" y="421" width="457" height="138"/>
+                                <rect key="frame" x="63" y="406" width="457" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Hxh-EB-lIN"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A9D-OC-eZ6">
-                                <rect key="frame" x="107" y="233" width="382" height="134"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A9D-OC-eZ6">
+                                <rect key="frame" x="107" y="204" width="382" height="192"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="192" id="mna-1S-h9f"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="WCv-HY-vWh" firstAttribute="top" secondItem="A9D-OC-eZ6" secondAttribute="bottom" constant="54" id="3xC-aP-cpK"/>
+                            <constraint firstItem="WCv-HY-vWh" firstAttribute="top" secondItem="A9D-OC-eZ6" secondAttribute="bottom" constant="10" id="3xC-aP-cpK"/>
                             <constraint firstAttribute="trailingMargin" secondItem="A9D-OC-eZ6" secondAttribute="trailing" constant="91" id="6Yw-js-GZj"/>
                             <constraint firstItem="Fj7-sl-TxO" firstAttribute="centerX" secondItem="WCv-HY-vWh" secondAttribute="centerX" id="Chl-ph-dRe"/>
                             <constraint firstItem="A9D-OC-eZ6" firstAttribute="centerY" secondItem="hM6-lf-BvA" secondAttribute="centerY" id="Gmf-bo-0tA"/>
@@ -154,8 +160,14 @@
                             <constraint firstItem="Fj7-sl-TxO" firstAttribute="top" secondItem="zmf-Ry-K1w" secondAttribute="bottom" constant="74" id="LNK-Mn-DPj"/>
                             <constraint firstItem="vKU-w0-NFC" firstAttribute="top" secondItem="WCv-HY-vWh" secondAttribute="bottom" constant="41" id="YVX-t6-iG7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="WCv-HY-vWh" secondAttribute="trailing" constant="60" id="gLt-ZC-lyW"/>
-                            <constraint firstItem="A9D-OC-eZ6" firstAttribute="top" secondItem="Fj7-sl-TxO" secondAttribute="bottom" constant="39" id="xlY-c2-RgJ"/>
+                            <constraint firstItem="A9D-OC-eZ6" firstAttribute="top" secondItem="Fj7-sl-TxO" secondAttribute="bottom" constant="10" id="xlY-c2-RgJ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="LNK-Mn-DPj"/>
+                                <exclude reference="YVX-t6-iG7"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="Vsc-C2-LLE">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="Mc6-r5-7Be">
@@ -186,61 +198,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vo-Tm-lM7">
-                                <rect key="frame" x="184" y="208" width="153" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkk-hH-om5">
-                                <rect key="frame" x="184" y="436" width="171" height="21"/>
+                                <rect key="frame" x="232" y="402" width="135" height="16"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="8dz-3b-jO6"/>
-                                    <constraint firstAttribute="width" constant="171" id="DOv-rU-PFd"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="16" id="2jX-mo-vcs"/>
+                                    <constraint firstAttribute="width" constant="135" id="k1j-2f-3tz"/>
+                                    <constraint firstAttribute="height" constant="16" id="wMp-qa-PRx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o9V-Ep-3jH">
+                                <rect key="frame" x="168" y="236" width="265" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="265" id="Qfb-h9-Oyl"/>
+                                    <constraint firstAttribute="height" constant="30" id="Sfs-BI-sjF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q7-uL-PcS">
+                                <rect key="frame" x="224" y="193" width="153" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="5Rn-pA-FMv"/>
+                                    <constraint firstAttribute="width" constant="153" id="h0i-Se-9xe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kP8-Oo-mYq">
+                                <rect key="frame" x="206" y="443" width="186" height="27"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="186" id="78l-RI-IWe"/>
+                                    <constraint firstAttribute="height" constant="27" id="HvX-xd-1Wy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81k-Dz-ATW">
-                                <rect key="frame" x="236" y="348" width="49" height="30"/>
+                                <rect key="frame" x="276" y="285" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="btn_submit:" destination="dTr-yC-aph" eventType="touchUpInside" id="x9I-zI-jzK"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kP8-Oo-mYq">
-                                <rect key="frame" x="169" y="480" width="186" height="27"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="LEQ-gT-xuQ"/>
-                                    <constraint firstAttribute="width" constant="186" id="Wwm-5k-JLE"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o9V-Ep-3jH">
-                                <rect key="frame" x="144" y="285" width="237" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="237" id="kg4-oj-fkd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="top" secondItem="7vo-Tm-lM7" secondAttribute="bottom" constant="56" id="3hB-Gd-JSU"/>
-                            <constraint firstItem="dkk-hH-om5" firstAttribute="top" secondItem="81k-Dz-ATW" secondAttribute="bottom" constant="58" id="BYA-Nr-dji"/>
-                            <constraint firstItem="7vo-Tm-lM7" firstAttribute="leading" secondItem="dkk-hH-om5" secondAttribute="leading" id="EMw-9M-1Ri"/>
-                            <constraint firstItem="dkk-hH-om5" firstAttribute="trailing" secondItem="kP8-Oo-mYq" secondAttribute="trailing" id="Fbv-ua-7Pb"/>
-                            <constraint firstItem="kP8-Oo-mYq" firstAttribute="top" secondItem="dkk-hH-om5" secondAttribute="bottom" constant="23" id="O0H-yu-YgD"/>
-                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="leading" secondItem="ShF-KN-n1f" secondAttribute="leading" constant="144" id="T1c-2e-gIg"/>
-                            <constraint firstItem="81k-Dz-ATW" firstAttribute="top" secondItem="o9V-Ep-3jH" secondAttribute="bottom" constant="33" id="TPO-Qn-lHW"/>
-                            <constraint firstItem="7vo-Tm-lM7" firstAttribute="centerX" secondItem="81k-Dz-ATW" secondAttribute="centerX" id="WMx-Jc-nZz"/>
-                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="centerX" secondItem="kP8-Oo-mYq" secondAttribute="centerX" id="jlb-Ac-OSV"/>
-                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="centerY" secondItem="ShF-KN-n1f" secondAttribute="centerY" id="zJG-2a-wTf"/>
+                            <constraint firstItem="4Q7-uL-PcS" firstAttribute="centerX" secondItem="o9V-Ep-3jH" secondAttribute="centerX" id="8r6-lN-iv1"/>
+                            <constraint firstItem="4Q7-uL-PcS" firstAttribute="centerX" secondItem="ShF-KN-n1f" secondAttribute="centerX" id="Ebw-Fd-v8u"/>
+                            <constraint firstItem="dkk-hH-om5" firstAttribute="centerX" secondItem="kP8-Oo-mYq" secondAttribute="centerX" id="NPK-Fk-Ge2"/>
+                            <constraint firstItem="dkk-hH-om5" firstAttribute="top" secondItem="81k-Dz-ATW" secondAttribute="bottom" constant="87" id="be3-5q-N7f"/>
+                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="centerX" secondItem="81k-Dz-ATW" secondAttribute="centerX" id="bro-Zc-dWR"/>
+                            <constraint firstItem="o9V-Ep-3jH" firstAttribute="top" secondItem="4Q7-uL-PcS" secondAttribute="bottom" constant="22" id="d2a-sa-t66"/>
+                            <constraint firstItem="81k-Dz-ATW" firstAttribute="top" secondItem="o9V-Ep-3jH" secondAttribute="bottom" constant="19" id="mVZ-6p-dYE"/>
+                            <constraint firstItem="81k-Dz-ATW" firstAttribute="centerY" secondItem="ShF-KN-n1f" secondAttribute="centerY" id="qkc-ps-oPv"/>
+                            <constraint firstItem="dkk-hH-om5" firstAttribute="centerX" secondItem="ShF-KN-n1f" secondAttribute="centerX" id="rcK-od-bob"/>
+                            <constraint firstItem="kP8-Oo-mYq" firstAttribute="top" secondItem="dkk-hH-om5" secondAttribute="bottom" constant="25" id="rwu-Vg-xeA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="23B-KJ-BQO">
